--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native-stack": "^6.9.12",
     "@types/styled-components-react-native": "^5.2.1",
     "axios": "^1.3.4",
+    "date-fns": "^2.29.3",
     "expo": "~48.0.4",
     "expo-font": "~11.1.1",
     "expo-splash-screen": "~0.18.1",
