--- a/package.json
+++ b/package.json
@@ -21,19 +21,20 @@
     "expo-font": "~11.1.1",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
+    "lottie-react-native": "5.1.4",
     "react": "18.2.0",
     "react-native": "0.71.3",
     "react-native-calendars": "^1.1293.0",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-iphone-x-helper": "^1.3.1",
+    "react-native-reanimated": "~2.14.4",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
     "react-native-svg-transformer": "^1.0.0",
     "styled-components": "^5.3.6",
-    "react-native-reanimated": "~2.14.4",
-    "lottie-react-native": "5.1.4"
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
