--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@expo-google-fonts/archivo": "^0.2.3",
     "@expo-google-fonts/inter": "^0.2.3",
     "@nozbe/watermelondb": "^0.25.5",
+    "@react-native-community/netinfo": "9.3.7",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
@@ -21,12 +22,14 @@
     "date-fns": "^2.29.3",
     "expo": "~48.0.4",
     "expo-font": "~11.1.1",
+    "expo-image-picker": "~14.1.1",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
     "lottie-react-native": "5.1.4",
     "react": "18.2.0",
     "react-native": "0.71.3",
     "react-native-calendars": "^1.1293.0",
+    "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-reanimated": "~2.14.4",
